Update: Eslint import/exports

--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "plugin:import/errors",
+      "plugin:import/warnings"
+    ]
   },
   "browserslist": {
     "production": [
